--- a/faq.html
+++ b/faq.html
@@ -34,7 +34,64 @@
       "name": "PictriKit FAQ",
       "url": "https://www.pictrikit.com/faq.html",
       "description": "Frequently asked questions about PictriKit screenshot layout tool",
-      "mainEntity": []
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Is PictriKit really free?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! PictriKit is completely free to use. All features are available without any payment, subscription, or registration required. We believe in providing useful tools that are accessible to everyone."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are my images uploaded to your servers?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No. All image processing happens entirely in your browser. Your images never leave your device and are never uploaded to any server. This ensures complete privacy and security for your sensitive screenshots."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What image formats are supported?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "PictriKit supports all common image formats including PNG, JPG, JPEG, GIF, and WebP. You can mix different formats in the same layout. Exports are always in high-quality PNG format."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I use PictriKit on mobile devices?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! PictriKit works on any device with a modern web browser, including smartphones and tablets. The interface is responsive and adapts to different screen sizes. For the best experience, we recommend using a desktop or tablet."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What's the maximum image size I can use?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "There's no strict limit, but very large images may affect performance depending on your device. For best results, we recommend images under 10MB each. The tool handles most standard screenshot sizes without any issues."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I save my layouts for later?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Currently, layouts are not saved between sessions since we don't store any data. However, you can export your finished layout as a PNG image at any time. We're considering adding local storage options in future updates."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How do I report a bug or suggest a feature?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We'd love to hear from you! Please visit our Contact page to send us feedback, report bugs, or suggest new features. Your input helps us improve PictriKit."
+          }
+        }
+      ]
     }
     </script>
 
