--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </script>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>PictriKit - Create Screenshot Mockups & Grids Instantly | Free Online Tool</title>
+<title>PictriKit: Create Screenshot Mockups & Grids Instantly</title>
 <meta name="description" content="One-click, free, combine any images, full HD export, no registration required. Create professional screenshot mockups and grids instantly.">
 <meta name="keywords" content="screenshot mockup, screenshot grid, combine screenshots, image collage, screenshot tool, device mockup, before after comparison, chat screenshot">
 <link rel="canonical" href="https://www.pictrikit.com/">
@@ -44,13 +44,7 @@
         "@type": "Offer",
         "price": "0",
         "priceCurrency": "USD"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "ratingCount": "150"
-      },
-      "featureList": [
+      },"featureList": [
         "Linear Stitching for chat logs and conversations",
         "Device Mockups for iPhone and Web browsers",
         "Compare screenshots side by side",
