--- a/tutorials.html
+++ b/tutorials.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Tutorials - Learn How to Use PictriKit | Screenshot Layout Guide</title>
+    <title>Tutorials - Learn How to Use PictriKit</title>
     <meta name="description" content="Learn how to create beautiful screenshot layouts with PictriKit. Step-by-step tutorials for Linear, Focus, Grid, Compare layouts and Device Frames.">
     <link rel="canonical" href="https://www.pictrikit.com/tutorials.html">
     <!-- Open Graph -->
@@ -25,6 +25,28 @@
     <meta name="twitter:title" content="Tutorials - Learn How to Use PictriKit">
     <meta name="twitter:description" content="Step-by-step tutorials for creating beautiful screenshot layouts.">
     <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "PictriKit Tutorials",
+      "url": "https://www.pictrikit.com/tutorials.html",
+      "description": "Learn how to create beautiful screenshot layouts with PictriKit. Step-by-step tutorials for Linear, Focus, Grid, Compare layouts and Device Frames.",
+      "isPartOf": {"@type": "WebSite", "name": "PictriKit", "url": "https://www.pictrikit.com"},
+      "mainEntity": [{
+        "@type": "HowTo",
+        "name": "How to Create Screenshot Layouts",
+        "url": "https://www.pictrikit.com/tutorials.html",
+        "step": [
+          {"@type": "HowToStep", "name": "Upload your screenshots", "text": "Choose images from your device to combine and arrange."},
+          {"@type": "HowToStep", "name": "Select a layout", "text": "Choose from Linear, Focus, Grid, Compare, or Device Frames layouts."},
+          {"@type": "HowToStep", "name": "Adjust settings", "text": "Customize colors, spacing, and sizing to match your needs."},
+          {"@type": "HowToStep", "name": "Export your image", "text": "Download your final layout as a high-quality PNG or JPG."}
+        ]
+      }]
+    }
+    </script>
     <!-- Favicon -->
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <!-- Preconnect for faster font loading -->
@@ -236,7 +258,7 @@
                         <h3>Getting Started with PictriKit</h3>
                         <p>Open the editor, choose a layout from the left sidebar, click on image slots to add your screenshots, then export. That's it!</p>
                         <div class="tutorial-meta">
-                            <span>‚è?2 min</span>
+                            <span>ÔøΩ?2 min</span>
                             <span>üìö Beginner</span>
                         </div>
                     </div>
@@ -249,7 +271,7 @@
                         <h3>Using Grid Layouts</h3>
                         <p>Select Grid from the sidebar, choose 22, 23, or 33 arrangement, add your images, and adjust spacing with the Style panel.</p>
                         <div class="tutorial-meta">
-                            <span>‚è?3 min</span>
+                            <span>ÔøΩ?3 min</span>
                             <span>üìö Beginner</span>
                         </div>
                     </div>
@@ -262,7 +284,7 @@
                         <h3>Adding Device Frames</h3>
                         <p>Click Frames in the sidebar, choose Browser, Phone, or Tablet frame, add your screenshot, and export a professional mockup.</p>
                         <div class="tutorial-meta">
-                            <span>‚è?2 min</span>
+                            <span>ÔøΩ?2 min</span>
                             <span>üìö Beginner</span>
                         </div>
                     </div>
@@ -275,7 +297,7 @@
                         <h3>Creating Comparisons</h3>
                         <p>Use Compare layouts for before/after views. Add two or more screenshots, and the tool automatically aligns them for easy comparison.</p>
                         <div class="tutorial-meta">
-                            <span>‚è?2 min</span>
+                            <span>ÔøΩ?2 min</span>
                             <span>üìö Beginner</span>
                         </div>
                     </div>
