--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Compare App UI Screenshots |Side by Side Interface Comparison</title>
+    <title>Compare App UI Screenshots Side by Side</title>
     <meta name="description" content="Compare app UI screenshots side by side. Show interface differences, design iterations, or version changes with clean comparison layouts.">
     <link rel="canonical" href="https://www.pictrikit.com/compare-ui-screenshots.html">
     
@@ -238,7 +238,7 @@
     <!-- All PictriKit Tools Gallery -->
     <section class="tools-gallery" style="margin-top:3rem;padding:2rem;background:white;border-radius:12px;border:1px solid #e5e7eb;">
       <div class="container" style="max-width:1000px;margin:0 auto;padding:0 1rem;">
-        <h2 style="text-align:center;margin-bottom:2rem;color:#1f2937;font-size:1.5rem;">ðŸ› ï¸?All PictriKit Tools</h2>
+        <h2 style="text-align:center;margin-bottom:2rem;color:#1f2937;font-size:1.5rem;">ðŸ› ï¿½?All PictriKit Tools</h2>
         <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1.25rem;">
           <a href="https://www.pictrikit.com/compare-screenshots.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
             <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">ðŸ“Š Compare Screenshots</h3>
@@ -261,11 +261,11 @@
             <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Create professional presentation layouts with multiple screenshots.</p>
           </a>
           <a href="https://www.pictrikit.com/before-after-screenshot.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
-            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">âš?Before After Screenshot</h3>
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">ï¿½?Before After Screenshot</h3>
             <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Create compelling before/after comparisons with customizable labels.</p>
           </a>
           <a href="https://www.pictrikit.com/clean-screenshot-layout.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
-            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">âœ?Clean Screenshot Layout</h3>
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">ï¿½?Clean Screenshot Layout</h3>
             <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Organize screenshots in clean, professional layouts with consistent spacing.</p>
           </a>
           <a href="https://www.pictrikit.com/align-screenshots-centered.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
@@ -298,7 +298,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">å©?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">ï¿½?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
