--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
 <a href="#how-it-works">How it Works</a>
 <a href="/tutorials.html">Tutorials</a>
 <a href="/templates.html">Templates</a>
+<a href="/blog.html">Blog</a>
 <a href="/changelog.html">Changelog</a>
 <a href="/faq.html">FAQ</a>
 <a href="/feedback.html">Feedback</a>
@@ -485,6 +486,7 @@
 <a href="#how-it-works">How it Works</a>
 <a href="/tutorials.html">Tutorials</a>
 <a href="/templates.html">Templates</a>
+<a href="/blog.html">Blog</a>
 <a href="/changelog.html">Changelog</a>
 <a href="/faq.html">FAQ</a>
 <a href="/feedback.html">Feedback</a>
