--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 <!-- Google Analytics -->
@@ -19,12 +19,12 @@
     <meta property="og:description" content="Track the latest updates and new features in PictriKit.">
     <meta property="og:url" content="https://www.pictrikit.com/changelog.html">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    <meta property="og:image" content="https://www.pictrikit.com/assets/images/pictrikit-1768218106825.png">
     <meta property="og:site_name" content="PictriKit">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Changelog - PictriKit Updates">
     <meta name="twitter:description" content="Track the latest updates and new features in PictriKit.">
-    <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/pictrikit-1768218106825.png">
     
     <!-- JSON-LD: SoftwareApplication (releaseNotes) + WebPage + BreadcrumbList -->
     <script type="application/ld+json">
@@ -257,7 +257,7 @@
                 </div>
                 <h3>UX Improvements & Feedback System Migration</h3>
                 <ul>
-                    <li><span class="tag tag-fixed">Fixed</span> Grid layout labels now show proper multiplication symbol (2×2, 1×3, 2×3, 3×3)</li>
+                    <li><span class="tag tag-fixed">Fixed</span> Grid layout labels now show proper multiplication symbol (2脳2, 1脳3, 2脳3, 3脳3)</li>
                     <li><span class="tag tag-new">New</span> Added use case hints for all layout tools (Linear, Focus, Grid, Compare, Frames)</li>
                     <li><span class="tag tag-new">New</span> Created Blog page with SEO optimization</li>
                     <li><span class="tag tag-new">New</span> Added Blog and FAQ links to app header navigation</li>
@@ -346,7 +346,7 @@
                 <img src="/favicon.svg?v=2" alt="PictriKit" width="24" height="24" style="width:1.5rem;height:1.5rem;">
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">©2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">漏2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
